<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">--Shop List--</string>

    <!-- List -->
    <!-- List row -->
    <string name="no_lists">No Lists Yet</string>
    <string name="item_timestamp_text_row">Created:</string>

    <!-- Add/Edit -->
    <string name="list_edit">Edit list</string>
    <string name="list_create">Create list</string>
    <string name="list_copy">Copy List</string>
    <string name="list_name">List name</string>
    <string name="list_new_name">New list name</string>
    <string name="list_edit_hint">List name</string>
    <string name="list_choose">Choose list</string>

    <!-- Floating Menu -->
    <!-- <string name="list_edit">Edit List</string> -->
    <string name="menu_list_copy">Copy List</string>
    <!-- Menu TODO: replace with action bar -->
    <string name="menu_list_insert">Add List</string>
    <string name="menu_list_delete">Delete List</string>
    <string name="menu_list_edit">Edit List</string>
    <string name="menu_list_choose">Choose List</string>
    <!-- Action Bar -->
    <string name="list_action_add">New List</string>
    <!-- End List -->


    <!-- Items -->
    <string name="item_activity_price_txt">Total cost: £</string>
    
    <!-- Items row -->
    <string name="no_items">No Items Yet</string>
    <string name="item_quant_text">Quantity: </string>
    <string name="item_purchased_text">Purchased: </string>
    <string name="item_price_text">Price:</string>

    <!-- Add/Edit -->
    <string name="item_edit">Edit item</string>
    <string name="item_create">Create item</string>
    <string name="item_name">Name: </string>
    <string name="item_quant">Quantity</string>
    <string name="item_edit_hint">Item name</string>
    <string name="item_price">Price</string>
    <string name="item_price_hint">Item price</string>

    <!-- Menu TODO: replace with action bar -->
    <string name="item_contextmenu_delete">Delete Item</string>
    <string name="item_contextmenu_edit">Edit Item</string>

    <!-- Default values -->
    <string name="item_default_quant">1</string>

    <!-- Action Bar -->
    <string name="item_action_add">New Item</string>
    <string name="item_action_choose_list">Choose List</string>
    <string name="item_action_go_shopping">Start Shopping</string>
    <string name="item_action_stop_shopping">Stop Shopping</string>
    <!-- End Items Strings -->

	<!-- Preferences -->
	<!-- Titles -->
	<string name="pref_title">Settings</string>
	<string name="pref_title_auto_remove">Auto Remove</string>
	<string name="pref_title_price_comparison">Price Comparison</string>
	<string name="pref_title_auto_complete">Auto complete</string>
	
	<!-- Summaries -->
	<string name="pref_summary_auto_remove">Auto remove purchased items</string>
	<string name="pref_summary_price_comparison">Show whether last price of a item is higher or smaller than current price</string>
	<string name="pref_summary_auto_complete">Show suggestios to items names</string>
	<!-- End preferences -->
	

    <!-- Geral -->
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- End Geral -->
    
    <!-- Alerts -->
    <string name="error_title">Error!</string>
    <string name="error_empty_msg">Empty field is not allowed!</string>
    <string name="got_ti_msg">I got it!</string>
	<!-- End Alerts -->

    
    <string name="title_activity_copy_list">Copy List</string>
    <string name="title_activity_list_copy">List Copy</string>
    <string name="title_activity_item_edit_frag">Edit Item</string>

</resources>
