<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/item_name" />
		<EditText android:id="@+id/item_name" 
			android:layout_width="0dip"
			android:layout_height="wrap_content" 
			android:layout_weight="1"
			android:hint="@string/item_edit_hint"/>
	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/item_quant" />
		<EditText android:id="@+id/item_quant"
		    android:text="@string/item_default_quant"
		    android:inputType="number"
		    android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="3"/>
	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/item_price" />
		<EditText android:id="@+id/item_price"
		    android:hint="@string/item_price_hint"
		    android:inputType="numberDecimal"
		    android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="3"/>
	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/item_purchased_text" />
		<Switch
			android:id="@+id/item_purchased_switch"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textOn="@string/yes"
			android:textOff="@string/no"/>
	</LinearLayout>
	

</LinearLayout>