<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/list_name" />
		<EditText android:id="@+id/list_edit_title" 
			android:layout_width="0dip"
			android:layout_height="wrap_content" 
			android:layout_weight="1"
			android:hint="@string/list_edit_hint"/>
	</LinearLayout>
	
	<Button android:id="@+id/confirm" 
	  android:text="@string/confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
	
	<Button android:id="@+id/cancel" 
		  android:text="@string/cancel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
	

</LinearLayout>