<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
    >

	<TextView android:id="@+id/item_name_row"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="left"/>
	
	<TextView android:id="@+id/item_quant_text_row"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/item_quant_text"
	    android:layout_gravity="left"/>
	<TextView android:id="@+id/item_quant_row"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>

	<TextView android:id="@+id/item_price_text_row"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/item_price_text"
	    android:layout_gravity="left"/>
	<TextView android:id="@+id/item_price_row"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>
	
	<TextView android:id="@+id/item_purchased_text_row"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/item_purchased_text"
	    android:layout_gravity="left"/>
	<Switch
		android:id="@+id/item_purchased_switch_row"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textOn="@string/yes"
		android:textOff="@string/no"/>
	<!-- 
	<TextView android:id="@+id/item_purchased_row"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/> -->

</LinearLayout>
